--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "json-server": "^0.17.4",
     "next": "13.5.6",
     "react": "^18",
